# epidemic_simulation

./: .gitignore  CMakeLists.txt
include/: Enums.h  Individual.h  Utils.h  Virus.h
src/: Individual.cpp  Utils.cpp  Virus.cpp  main.cpp
